Fix typo in REMOTE_HOST IP address format in Jenkinsfile

--- a/.jenkins/Jenkinsfile
+++ b/.jenkins/Jenkinsfile
@@ -9,7 +9,7 @@ pipeline {
 
     environment {
         REMOTE_USER = "ubuntu"
-        REMOTE_HOST = "172-31-46-144"
+        REMOTE_HOST = "172.31.46.144"        
         REMOTE_DIR = "/var/www/html"
         BACKUP_DIR = "/home/ubuntu/backups"
     }
